objects/Doc_Integration_Status__c.object
<CustomObject>
    <fields>
        <fullName>File_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC File ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filename</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fileversion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fileversion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impl_Case_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case Id</label>
        <referenceTo>OE_Order__c</referenceTo>
        <relationshipLabel>Doc Integration Status</relationshipLabel>
        <relationshipName>Doc_Integration_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processing Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Doc Integration Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Integration Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>